fix: disable blue tap highlight on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,15 @@
       radial-gradient(at 0% 100%, rgba(254, 205, 211, 0.3) 0px, transparent 50%);
     background-attachment: fixed;
   }
+
+  * {
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  button,
+  a {
+    -webkit-touch-callout: none;
+  }
 }
 
 @layer utilities {
